--- a/index.html
+++ b/index.html
@@ -17,5 +17,14 @@
         <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="cabecalho__logo">
         <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
     </header>
+    <nav class="menu-lateral">
+        <img src="" alt="" class="menu-lateral__logo">
+        <a href="#" class="menu-lateral__link"></a>
+        <a href="#" class="menu-lateral__link"></a>
+        <a href="#" class="menu-lateral__link"></a>
+        <a href="#" class="menu-lateral__link"></a>
+        <a href="#" class="menu-lateral__link"></a>
+        <a href="#" class="menu-lateral__link"></a>
+    </nav>
 </body>
 </html>
