--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
         <button class="cabecalho__notificacao" aria-label="Notificação"><i></i></button>
     </header>
     <nav class="menu-lateral">
-        <img src="" alt="" class="menu-lateral__logo">
-        <a href="#" class="menu-lateral__link"></a>
-        <a href="#" class="menu-lateral__link"></a>
-        <a href="#" class="menu-lateral__link"></a>
-        <a href="#" class="menu-lateral__link"></a>
-        <a href="#" class="menu-lateral__link"></a>
-        <a href="#" class="menu-lateral__link"></a>
+        <img src="assets/img/logo.svg" alt="Logotipo da HZC" class="menu-lateral__logo">
+        <a href="#" class="menu-lateral__link">Início</a>
+        <a href="#" class="menu-lateral__link">Vídeo</a>
+        <a href="#" class="menu-lateral__link">Picos</a>
+        <a href="#" class="menu-lateral__link">Integrantes</a>
+        <a href="#" class="menu-lateral__link">Camisas</a>
+        <a href="#" class="menu-lateral__link">Pinturas</a>
     </nav>
 </body>
 </html>
