--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
+        <section class="secao">
+            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+        </section>
     </main>
     <script src="index.js"></script>
 </body>
