--- a/index.html
+++ b/index.html
@@ -41,6 +41,15 @@
         </article>
         <section class="secao">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <article class="cartao">
+                <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+                <div class="cartao__conteudo">
+                    <p class="cartao__perfil">Bruno Lopez</p>
+                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                    <button class="cartao__botao cartao__botao--play"></button>
+                </div>
+            </article>
         </section>
     </main>
     <script src="index.js"></script>
