Add aria-label assistir agora

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play"></button>
+                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
