--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <section class="secao">
             <h3 class="titulo-secao">Vídeos mais vistos</h3>
             <article class="cartao">
-                <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem">
+                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
                     <h3 class="cartao__titulo">HZC - Título</h3>
