--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <img src="assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Video em destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
+                <h3 class="cartao__titulo">HZC - Life is... / 2021</h3>
                 <p class="cartao__perfil">Bruno Lopez</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
                 <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
             </div>
         </article>
@@ -48,27 +48,27 @@
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
                     <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_2.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Vol. 3</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_3.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">HZC - Pescaria na Urca</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_4.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagi - Guerreiros do Asfalto</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
                 <li class="cartao__item">
-                    <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <img src="assets/img/miniatura_5.png" alt="Thumbnail" class="cartao__item-thumbnail">
+                    <h4 class="cartao__item-titulo">Vidalocagi - Não importa o nível</h4>
+                    <p class="cartao__item-perfil">Júlia Fonseca</p>
                 </li>
             </ul>
         </article>
