--- a/index.html
+++ b/index.html
@@ -77,68 +77,68 @@
             <article class="cartao">
                 <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">HZC - Tudo sem Padrin</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Enter The Hu-flez</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">HZC - Vol. 3</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/video_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
+                    <h3 class="cartao__titulo">HZC - Love Machine</h3>
                     <p class="cartao__info cartao__info--tempo">33 minutos</p>
                     <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
         <article class="cartao cartao--recentes produtos-recentes">
-            <h3 class="cartao__titulo">Vídeos recentes</h3>
+            <h3 class="cartao__titulo">Novas artes</h3>
             <a href="#" class="cartao__link">Ver todos</a>
             <ul class="cartao__lista">
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Sem título 01</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyriça</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Sem título 02</h4>
+                    <p class="cartao__item-perfil">Antonio Tebyriça</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Segurança</h4>
+                    <p class="cartao__item-perfil">Raphael Gibson</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Malunguisse</h4>
+                    <p class="cartao__item-perfil">Carolina Canavarro</p>
                 </li>
                 <li class="cartao__item">
                     <img src="assets/img/miniatura_1.png" alt="Thumbnail" class="cartao__item-thumbnail">
-                    <h4 class="cartao__item-titulo">HZC - Love Machine</h4>
-                    <p class="cartao__item-perfil">Bruno Lopez</p>
+                    <h4 class="cartao__item-titulo">Coroa do converse</h4>
+                    <p class="cartao__item-perfil">Nikolas de Murtas</p>
                 </li>
             </ul>
         </article>
