--- a/index.html
+++ b/index.html
@@ -146,12 +146,12 @@
             <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
             <img src="assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
-                <p class="cartao__destaque">Video em destaque</p>
-                <h3 class="cartao__titulo">HZC - Título</h3>
-                <p class="cartao__perfil">Bruno Lopez</p>
+                <p class="cartao__destaque">Nova arte</p>
+                <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
+                <p class="cartao__perfil">João ZMS</p>
                 <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                <p class="cartao__info cartao__info--visualizacao">33 visualizações</p>
-                <button class="cartao__botao cartao__botao--play cartao__botao--destaque">Assistir agora</button>
+                <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
+                <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar agora</button>
             </div>
         </article>
         <section class="secao secao-produtos">
