--- a/index.html
+++ b/index.html
@@ -149,47 +149,47 @@
                 <p class="cartao__destaque">Nova arte</p>
                 <h3 class="cartao__titulo">Only Zikas - Lagoa Dompa Club</h3>
                 <p class="cartao__perfil">João ZMS</p>
-                <p class="cartao__info cartao__info--tempo">33 minutos</p>
+                <p class="cartao__info cartao__info--moeda">33,33</p>
                 <p class="cartao__info cartao__info--visualizacao">53 visualizações</p>
                 <button class="cartao__botao cartao__botao--carrinho cartao__botao--destaque">Comprar agora</button>
             </div>
         </article>
         <section class="secao secao-produtos">
-            <h3 class="titulo-secao">Vídeos mais vistos</h3>
+            <h3 class="titulo-secao">Camisas mais recentes</h3>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_1.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">André Soares</p>
+                    <h3 class="cartao__titulo">IBM</h3>
+                    <p class="cartao__info cartao__info--moeda">33,33</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_2.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">Huflez Crew Philosophy Club</h3>
+                    <p class="cartao__info cartao__info--moeda">33,33</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_3.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
-                    <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <p class="cartao__perfil">Luiza Sampaio</p>
+                    <h3 class="cartao__titulo">Corujita Noturna</h3>
+                    <p class="cartao__info cartao__info--moeda">33,33</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
             <article class="cartao">
-                <img src="assets/img/video_1.png" alt="Vídeo" class="cartao__imagem">
+                <img src="assets/img/produto_4.png" alt="Vídeo" class="cartao__imagem">
                 <div class="cartao__conteudo">
                     <p class="cartao__perfil">Bruno Lopez</p>
-                    <h3 class="cartao__titulo">HZC - Título</h3>
-                    <p class="cartao__info cartao__info--tempo">33 minutos</p>
-                    <button class="cartao__botao cartao__botao--play" aria-label="Assistir agora"></button>
+                    <h3 class="cartao__titulo">GGG - Gatin G Gorro</h3>
+                    <p class="cartao__info cartao__info--moeda">33,33</p>
+                    <button class="cartao__botao cartao__botao--carrinho" aria-label="Assistir agora"></button>
                 </div>
             </article>
         </section>
