--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     <link rel="stylesheet" href="assets/css/reset.css">
     <link rel="stylesheet" href="assets/css/estilos.css">
 </head>
+
 <body>
     <header class="cabecalho">
         <button class="cabecalho__menu" aria-label="Menu"><i></i></button>
@@ -30,7 +32,8 @@
     <main class="principal">
         <h2 class="titulo-pagina">Início</h2>
         <article class="cartao cartao--destaque destaque-video">
-            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="assets/img/banner-mobile_1.png" alt="Banner do cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="assets/img/banner_1.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Video em destaque</p>
@@ -143,7 +146,8 @@
             </ul>
         </article>
         <article class="cartao cartao--destaque destaque-produtos">
-            <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--mobile">
+            <img src="assets/img/banner-mobile_2.png" alt="Banner do cartão"
+                class="cartao__imagem cartao__imagem--mobile">
             <img src="assets/img/banner_2.png" alt="Banner do cartão" class="cartao__imagem cartao__imagem--desktop">
             <div class="cartao__conteudo">
                 <p class="cartao__destaque">Nova arte</p>
@@ -196,4 +200,5 @@
     </main>
     <script src="index.js"></script>
 </body>
+
 </html>
